--- a/gradle/java-library.gradle
+++ b/gradle/java-library.gradle
@@ -6,17 +6,17 @@ if (!archivesBaseName.startsWith("mockito-")) {
     archivesBaseName = "mockito-" + project.name
 }
 
-generatePomFileForJavaLibraryPublication.doLast {
+/*generatePomFileForJavaLibraryPublication.doLast {
     //validates the the pom has correct artifact id to avoid issues like #1444
     def pom = new XmlSlurper().parse(destination)
     assert pom.artifactId == archivesBaseName
     assert pom.name == archivesBaseName
-}
+}*/
 
 bintrayUpload.enabled = true
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 9
+targetCompatibility = 9
 
 test {
     include "**/*Test.class"
